// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Section should render 1`] = `
<header
  className="sc-cSHVUG hQujCk"
>
  <div
    className="sc-kAzzGY gikFWy"
  >
    title
  </div>
</header>
`;

exports[`Section should render content 1`] = `
<header
  className="sc-cSHVUG hQujCk"
>
  <div
    className="sc-kAzzGY gikFWy"
  >
    title
  </div>
  content
</header>
`;
